fixed spacing bugs

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,7 +2,7 @@
   background-image: url("https://images.pexels.com/photos/1631677/pexels-photo-1631677.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   background-repeat: no-repeat;
   background-size: cover;
-  /*height: 100vh;*/
+  height: 100vh;
   min-height: 100%;
   background-position: center center;
 }
